# wust_radar

./: .gitattributes  .gitignore
wust_binocular/: CMakeLists.txt  package.xml
wust_binocular/config/: camera.yaml  camera_info.yaml  detect_params.yaml  params.yaml
wust_binocular/include/wust_binocular/: debug.hpp  detect.hpp  frame_synchronizer.hpp  stereo_depth_estimator.hpp  wust_binocular_node.hpp
wust_binocular/include/wust_binocular/camera/: hik.hpp  video_player.hpp
wust_binocular/include/wust_binocular/type/: image.hpp  type.hpp
wust_binocular/launch/: debug_launch.py  wust_binocular_launch.py
wust_binocular/src/: debug.cpp  detect.cpp  wust_binocular_node.cpp
wust_binocular/src/camera/: hik.cpp  recorder.cpp  video_player.cpp
wust_binocular/utils/: to_binocular.py
wust_binocular/yolo/: CMakeLists.txt  classify.cu
wust_radar/src/wust_binocular/src/: detect.cpp
wust_radar_core/: CMakeLists.txt  cal.py  click.py  package.xml  pnp_result.yaml
wust_radar_core/config/: guess_pts.yaml  p.yaml  params.yaml
wust_radar_core/include/wust_radar_core/: car_pool.hpp  cascade_match_tracker.hpp  debug.hpp  kf.hpp  pixel_to_world.hpp  track.hpp  utils.hpp  wust_radar_core_node.hpp
wust_radar_core/include/wust_radar_core/type/: type.hpp
wust_radar_core/launch/: debug_launch.py  wust_radar_core_launch.py
wust_radar_core/src/: car_pool.cpp  cascade_match_tracker.cpp  debug.cpp  pixel_to_world.cpp  track.cpp  wust_radar_core_node.cpp
wust_radar_core/utils/: cal.py  cal_guess.py  click.py
wust_radar_core/utils/output/: 0.json  20250809_021721.json  20250810_153131.json  3224.json  guess_points_output.yaml  pnp_result.yaml
wust_radar_detect/: CMakeLists.txt  package.xml
wust_radar_detect/config/: camera.yaml  detect_params.yaml  params.yaml
wust_radar_detect/include/wust_radar_detect/: debug.hpp  detect.hpp  wust_radar_detect_node.hpp
wust_radar_detect/include/wust_radar_detect/camera/: hik.hpp  single_camera.hpp  video_player.hpp
wust_radar_detect/include/wust_radar_detect/type/: image.hpp  type.hpp
wust_radar_detect/infer/: CMakeLists.txt
wust_radar_detect/infer/include/: BaseInfer.hpp  InferTool.hpp  classify.hpp  yolos.hpp
wust_radar_detect/infer/src/: BaseInfer.cpp  InferTool.cu  classify.cu  yolo.cu
wust_radar_detect/launch/: debug_launch.py  wust_radar_detect_launch.py
wust_radar_detect/src/: debug.cpp  detect.cpp  wust_radar_detect_node.cpp
wust_radar_detect/src/camera/: hik.cpp  recorder.cpp  video_player.cpp
wust_radar_detect/utils/: onnx2trt.py  to_binocular.py
wust_radar_detect/yolo/: infer.cu  yolo.cu  yolos.hpp
wust_radar_interfaces/: CMakeLists.txt  package.xml
wust_radar_interfaces/msg/: Armor.msg  Box.msg  DetectResult.msg  SingleCar.msg
wust_utils/: CMakeLists.txt  package.xml
wust_utils/include/wust_utils/: ThreadPool.h  adaptive_resource_pool.hpp  logger.hpp  timer.hpp  utils.hpp
wust_utils/src/: ThreadPool.cpp  adaptive_resource_pool.cpp  logger.cpp  timer.cpp  utils.cpp
